--- a/src/components/style.css
+++ b/src/components/style.css
@@ -31,7 +31,16 @@ body
     backdrop-filter: blur(18.2px);
     align-items: center;
 }
-
+.socialmedia
+{
+    position: sticky;
+    overflow: hidden;
+    flex-direction: column;
+    margin-right: 5%;
+    margin-top:10%;
+    display: flex;
+    float:right;
+}
 .logo
 {
     color: #bdc3c7;
@@ -73,6 +82,12 @@ a:hover{
     opacity: 1.9;
     text-shadow:0px 0px 10px rgba(255,255,255,0.6);
 }
-
+.footer
+{
+    color:white;
+    text-align: center;
+    padding:2% 5% 2% 5%;
+    background-color: #0c1117;
+}
 
 
