--- a/src/components/work.css
+++ b/src/components/work.css
@@ -9,11 +9,38 @@
 .work-heading
 {
     text-align: center;
-    padding-top: 15%;
+    padding-top: 10%;
+    padding-bottom: 5%;
     font-family: 'Courier New', Courier, monospace;
     margin-left: 5%;
     justify-content: space-between;
     text-transform: uppercase;
     color:#ecf0f1;
     font-size: 5vw;
+}
+.project-list
+{
+    display: grid;
+    width:100%;
+    grid-template-columns: repeat(auto-fit,300px);
+    place-content: center;
+    gap:1rem
+}
+
+.card
+{
+    border-radius: 9px;
+    background-color: #222f3e;
+    color: #c8d6e5;
+    padding: 4% 7% 7% 7%
+}
+
+.pro
+{
+    font-weight: bold;
+    text-align: justify;
+}
+.pro h4
+{
+    font-size: 25px;
 }
